# fresh

./: .dir-locals.el  .gitignore  AST.hs  Main.hs  THIH.hs  Types.hs  fresh.cabal  mutype.cabal  stack.yaml
doc/: EBNF.hs  dll.c  ebnf.ebnf  example.c  functor.c  sll.c  spec.md  syntax.ebnf  syntax.txt
src/Fresh/: .gitignore  BuiltIn.hs  CodeGen.hs  Expr.hs  Func.hs  Infer.hs  InferMonad.hs  Kind.hs  Lexer.x  Module.hs  OrderedMap.hs  OrderedSet.hs  Parse.hs  Parse.y  ParseAST.hs  Pretty.hs  Subst.hs  Token.hs  Type.hs  Types.hs  Unify.hs
src/Fresh/Parse/: Lexer.x  Parse.y  ParseAST.hs  Pretty.hs  Token.hs
test/: Spec.hs  TestParse.hs  example.fresh
